Clean up spectrogram creation

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -53,6 +53,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wall_analysis import add_spectrogram\n",
+    "df_total = df_total.assign(spectrogram=None)\n",
+    "df_total = df_total.apply(add_spectrogram, axis=1)\n",
+    "\n",
+    "# without this, the snr column becomes int and things break down below.\n",
+    "df_total = df_total.astype(object)\n",
+    "\n",
+    "print(df_total.dtypes)\n",
+    "#df_total = df_total.apply(pd.to_numeric, axis=0, errors='ignore', downcast='integer')\n",
+    "#print(df_total.dtypes)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,10 +80,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "from wall_analysis import filter_by_dicts, extract_linear_psd\n",
+    "from wall_analysis import filter_by_dicts, extract_linear_psd, add_spectrogram\n",
     "\n",
     "dict_chosen = [{\n",
     "    'snr': 0,\n",
@@ -82,12 +102,12 @@
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
     "for j, row in df_chosen.iterrows():\n",
-    "    spec = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
+    "    spec_sum = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
     "\n",
     "    fig, axs  = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    fig.suptitle(f'experiment \"{row.appendix}\"')\n",
-    "    axs[0].pcolorfast(range(spec.shape[0]), row.frequencies, np.log10(spec.T))\n",
+    "    axs[0].pcolorfast(range(spec_sum.shape[0]), row.frequencies, np.log10(spec_sum.T))\n",
     "    psd = extract_linear_psd(row.signals_f, row.frequencies, ax=axs[0], **sweep_lines)\n",
     "\n",
     "    for i in range(psd.shape[0]):\n",
@@ -101,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test new functions\n",
     "from wall_analysis import extract_psd, extract_psd_dict\n",
     "psd_dict1 = [{0: [], 100:[1, 2, 3], 200:[0, 4, 5]}, {100:[0, 1], 200:[1, 2]}]\n",
     "psd_dict2 = [{100:[1, 2, 5], 250:[1, 4, 5]}, {100:[0, 1], 250:[3, 4]}]\n",
@@ -157,7 +178,7 @@
     "    legend = []\n",
     "    for j, row in df.iterrows():\n",
     "        psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
-    "        df_total.loc[j, 'psd_dict'] = psd_dict\n",
+    "        df_total.loc[j, 'psd_dict'] = np.array(psd_dict)\n",
     "        legend.append(row.appendix)"
    ]
   },
@@ -326,7 +347,7 @@
     "\n",
     "for i, row in df_chosen.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
-    "    spec = np.mean(np.abs(row.signals_f), axis=1)\n",
+    "    spec = np.mean(row.spectrogram**2, axis=1)\n",
     "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1].T))\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
@@ -367,7 +388,7 @@
     "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
     "for i, row in df_chosen.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
-    "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
+    "    spec = np.mean(row.spectrogram**2, axis=1)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1].T))\n",
@@ -390,6 +411,48 @@
     "    fname = 'plots/sweep_motors_psd.pdf'\n",
     "    fig.savefig(fname, bbox_inches='tight')\n",
     "    print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "\n",
+    "chosen_dict = dict(\n",
+    "    appendix='',\n",
+    "    snr=1,\n",
+    "    source='sweep'\n",
+    ")\n",
+    "print(chosen_dict)\n",
+    "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
+    "for i, row in df_chosen.iterrows():\n",
+    "    fig, ax = plt.subplots()\n",
+    "    spec = np.mean(row.spectrogram**2, axis=2)\n",
+    "    plot_spec = np.full(spec.shape, np.nan)\n",
+    "    plot_spec[spec>0] = np.log10(spec[spec>0])\n",
+    "    ax.set_title(f'motors: {row.motors}')\n",
+    "    \n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    ax.set_ylabel('frequency [Hz]')\n",
+    "    #ax.pcolorfast(row.seconds, all_frequencies, plot_spec[:-1, :-1])\n",
+    "    ax.pcolorfast(range(len(row.seconds)), all_frequencies, plot_spec[:-1, :-1])#, cmap='inferno')\n",
+    "    ax.set_xlabel('time [idx]')\n",
+    "    ax.set_ylim(1000, 5000)\n",
+    "    \n",
+    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, n_freq=1, \n",
+    "                                min_t=100, max_t=300)\n",
+    "    psd, frequencies, psd_std  = extract_psd([psd_dict])\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    for i in range(psd.shape[0]):\n",
+    "        ax.semilogy(frequencies, psd[i, :])\n",
+    "    ax.set_xlabel('frequency [Hz]')\n",
+    "    ax.set_ylabel('PSD')\n",
+    "    ax.grid(which='both')"
    ]
   },
   {
