Add distance slices

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -64,7 +64,6 @@
     "\n",
     "# without this, the snr column becomes int and things break down below.\n",
     "df_total = df_total.astype(object)\n",
-    "\n",
     "print(df_total.dtypes)\n",
     "#df_total = df_total.apply(pd.to_numeric, axis=0, errors='ignore', downcast='integer')\n",
     "#print(df_total.dtypes)"
@@ -102,7 +101,7 @@
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
     "for j, row in df_chosen.iterrows():\n",
-    "    spec_sum = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
+    "    spec_sum = np.sum(row.spectrogram, axis=1) # sum over all mics\n",
     "\n",
     "    fig, axs  = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(10, 5)\n",
@@ -431,7 +430,7 @@
     "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
     "for i, row in df_chosen.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
-    "    spec = np.mean(row.spectrogram**2, axis=2)\n",
+    "    spec = np.mean(row.spectrogram**2, axis=1).T\n",
     "    plot_spec = np.full(spec.shape, np.nan)\n",
     "    plot_spec[spec>0] = np.log10(spec[spec>0])\n",
     "    ax.set_title(f'motors: {row.motors}')\n",
