--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -177,7 +177,7 @@
     "from simulation import get_signals_f\n",
     "room = generate_room(distance_cm=50, single_mic=True)\n",
     "\n",
-    "signals_f = get_signals_f(room, signals['sweep'])\n",
+    "signals_f = get_signals_f(room, signals['sweep'], n_times=100)\n",
     "#signals_f = get_signals_f(room, signals['random'])\n",
     "#signals_f = get_signals_f(room, signals['multi'])\n",
     "#signals_f = get_signals_f(room, signals['mono4125'])\n",
@@ -214,6 +214,27 @@
    "metadata": {},
    "source": [
     "# Distance-frequency matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO(FD): below is potentially much faster than frequency slices. \n",
+    "# consider replacing distance-frequency matrix generation with these. \n",
+    "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
+    "\n",
+    "distances_cm = np.linspace(0, 40, 20)\n",
+    "frequency = 1000\n",
+    "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm)\n",
+    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm)\n",
+    "plt.figure()\n",
+    "for i in range(Hs.shape[1]):\n",
+    "    plt.semilogy(distances_cm, Hs[:, i], label=f'mic{i}', ls='-', color=f'C{i}')\n",
+    "    plt.semilogy(distances_cm, Hs_theo[:, i], ls=':', color=f'C{i}')\n",
+    "plt.legend()"
    ]
   },
   {
