--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -436,20 +436,19 @@
     "    fig, axs = plt.subplots(3, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
     "    axs[0, 0].set_yscale('log')\n",
     "    axs[0, 0].set_ylim(1e-2, 3e2)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "    fig.set_size_inches(10, 10)\n",
     "    \n",
     "    slices_theory = get_freq_slice_theory(frequencies, distance_cm=distance)\n",
     "    slices_pyroom = get_freq_slice_pyroom(frequencies, distance_cm=distance, signal=signal)\n",
     "    \n",
     "    for j, mic_idx in enumerate(CHOSEN_MICS):\n",
     "        axs[0, j].set_title(f'm{mic_idx}')\n",
-    "        axs[0, j].plot(frequencies, psd[mic_idx], label='Y(f)', color=f'C{mic_idx}')\n",
-    "        axs[0, j].plot(frequencies, psd_calib[mic_idx], ls=':', label='X(f)', color=f'C{mic_idx}')\n",
+    "        axs[0, j].plot(frequencies, psd[mic_idx], label='|Y(f)|', color=f'C{mic_idx}')\n",
+    "        axs[0, j].plot(frequencies, psd_calib[mic_idx], ls=':', label='|X(f)|', color=f'C{mic_idx}')\n",
     "        #axs[0, j].plot(frequencies, psd_mean, color='k')\n",
     "        \n",
     "        psd_ratio = psd[mic_idx]/psd_calib[mic_idx]\n",
-    "        axs[1, j].plot(frequencies, psd_ratio, label=f'H(f)', color=f'C{mic_idx}')\n",
+    "        axs[1, j].plot(frequencies, psd_ratio, label=f'|H(f)|', color=f'C{mic_idx}')\n",
     "        #axs[1, j].plot(frequencies, psd[mic_idx]/psd_mean, label=f'global calib', color='k')\n",
     "        \n",
     "        features['variance'][mic_idx, d_idx] = np.var(psd_ratio)\n",
@@ -457,9 +456,6 @@
     "        axs[0, j].legend(loc='lower right')\n",
     "        axs[1, j].legend(loc='lower right')\n",
     "\n",
-    "        #axs[1, j].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory', color=\"black\")\n",
-    "        #axs[1, j].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroomacoustics', color=\"gray\")\n",
-    "        \n",
     "        axs[2, j].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory', color=\"black\")\n",
     "        axs[2, j].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom', color=\"gray\")\n",
     "        axs[2, j].legend(loc='lower right')\n",
@@ -468,7 +464,10 @@
     "        axs[1, j].grid('both')\n",
     "        axs[2, j].grid('both')\n",
     "        \n",
-    "    fig.savefig(f'plots/f_slice_{distance}.pdf', bbox_inches='tight')\n",
+    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}', y=0.93)\n",
+    "    fname = f'plots/f_slice_{distance}.pdf'\n",
+    "    fig.savefig(fname, bbox_inches='tight')\n",
+    "    print('saved as', fname)\n",
     "\n",
     "    d_idx += 1\n",
     "    continue\n",
@@ -562,6 +561,7 @@
    "outputs": [],
    "source": [
     "import itertools\n",
+    "from wall_analysis import filter_by_dicts\n",
     "labels = ['motors', 'source']\n",
     "vals_dict = {l:df_dist[l].unique() for l in labels}\n",
     "vals_dict['source'] = sorted(vals_dict['source'])\n",
@@ -663,9 +663,15 @@
     "\n",
     "filters = ['source', 'degree']\n",
     "for chosen_tuple, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby(filters):\n",
+    "    filter_dict = dict(zip(filters, chosen_tuple))\n",
     "    fig, axs = plt.subplots(1, 3, squeeze=False)\n",
     "    fig.set_size_inches(15, 5)\n",
-    "    fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
+    "    title = ''\n",
+    "    for key, val in filter_dict.items():\n",
+    "        title += f'{key}: {val}, '\n",
+    "        break\n",
+    "    title = title[:-2]\n",
+    "    fig.suptitle(title)\n",
     "    \n",
     "    j_square = None\n",
     "    for j, motors in enumerate(params_dist.MOTORS_LIST):\n",
@@ -683,7 +689,16 @@
     "        plot_square(row.seconds, row.frequencies, cut_x, cut_y, axs[0, j_square]) \n",
     "        spec_square  = spec[cut_x, :]\n",
     "        spec_square = spec_square[:, cut_y].T\n",
-    "        axs[0, 2].pcolormesh(row.seconds[cut_x], row.frequencies[cut_y], np.log10(spec_square))"
+    "        axs[0, 2].pcolormesh(row.seconds[cut_x], row.frequencies[cut_y], np.log10(spec_square))\n",
+    "    axs[0, 0].set_xlabel('time idx')\n",
+    "    axs[0, 0].set_ylabel('frequency [Hz]')\n",
+    "    axs[0, 1].set_xlabel('time idx')\n",
+    "    axs[0, 1].set_ylabel('frequency [Hz]')\n",
+    "    axs[0, 2].set_xlabel('time idx')\n",
+    "    axs[0, 2].set_ylabel('frequency [Hz]')\n",
+    "    fname = f'plots/spec_{filter_dict[\"source\"]}.pdf' \n",
+    "    fig.savefig(fname, bbox_inches='tight')\n",
+    "    print('saved as', fname)"
    ]
   },
   {
@@ -877,16 +892,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frequency = 2375\n",
+    "frequency = 3125 \n",
+    "#frequency = 2375\n",
     "filter_dict = {\n",
     "    'source': f'mono{frequency}',\n",
-    "    #'motors': 0,\n",
-    "    'motors': 'all45000',\n",
-    "    'mic_type': 'audio_deck'\n",
+    "    'motors': 0,\n",
+    "    #'motors': 'all45000',\n",
+    "    'mic_type': 'audio_deck',\n",
+    "    #'mic_type': 'measurement'\n",
     "}\n",
     "df_chosen = filter_by_dicts(df_dist, [filter_dict])\n",
     "assert len(df_chosen) == 1, len(df_chosen)\n",
-    "row = df_chosen.iloc[0]"
+    "row = df_chosen.iloc[0]\n",
+    "n_mics = row.signals_f.shape[1]"
    ]
   },
   {
@@ -895,9 +913,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0. clean signals_F\n",
+    "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
+    "# 2. study the bin of interest\n",
+    "# chosen bin based on buzzer\n",
+    "if row.frequencies_matrix is not None:\n",
+    "    buzzer_times = row.frequencies_matrix[:, 0] == frequency\n",
+    "    valid_times = row.seconds > 0\n",
+    "    mask = buzzer_times & valid_times\n",
+    "    bin_ = 0\n",
+    "else:\n",
+    "    valid_times = row.seconds > 0\n",
+    "    mask = valid_times\n",
+    "    bin_ = np.argmin(np.abs(row.frequencies - frequency))\n",
+    "\n",
+    "spec = np.abs(row.signals_f) # times x mics x freqs\n",
+    "n_mics = spec.shape[1]\n",
+    "\n",
+    "distances_cm = np.linspace(10, 60)\n",
+    "slices_theory = get_dist_slice_theory(frequency, distances_cm=distances_cm)\n",
+    "slices_pyroom = get_dist_slice_pyroom(frequency, distances_cm=distances_cm)\n",
+    "\n",
+    "fig1, axs1 = plt.subplots(1, n_mics, squeeze=False, sharey=True)\n",
+    "fig2, axs2 = plt.subplots(1, n_mics, squeeze=False, sharey=True)\n",
+    "fig1.set_size_inches(10, 5)\n",
+    "fig2.set_size_inches(10, 5)\n",
+    "for mic_idx in range(n_mics):\n",
+    "    \n",
+    "    axs1[0, mic_idx].set_title(f'mic{mic_idx}')\n",
+    "    axs1[0, mic_idx].semilogy(row.d_estimate[mask], spec[mask, mic_idx, bin_], \n",
+    "                      color=f'C{mic_idx}', label='|Y(d)|')\n",
+    "    axs1[0, mic_idx].grid(which='both')\n",
+    "    axs1[0, mic_idx].legend(loc='upper left')\n",
+    "    axs1[0, mic_idx].set_xlabel('distance [m]')\n",
+    "    \n",
+    "    \n",
+    "    axs2[0, mic_idx].semilogy(distances_cm / 100, slices_theory[:, mic_idx], color='black', label='theory')\n",
+    "    axs2[0, mic_idx].semilogy(distances_cm / 100, slices_pyroom[:, mic_idx], color='gray', label='pyroom')\n",
+    "    axs2[0, mic_idx].grid(which='both')\n",
+    "    axs2[0, mic_idx].set_xlabel('distance [m]')\n",
+    "    axs2[0, mic_idx].legend(loc='upper left')\n",
+    "    axs2[0, mic_idx].set_ylim(2, 20)\n",
+    "    \n",
+    "    # custom stuff\n",
+    "    if frequency == 2375:\n",
+    "        if row.mic_type == 'measurement':\n",
+    "            axs1[0, mic_idx].set_ylim(1e-3, 1e-1)\n",
+    "            axs1[0, mic_idx].set_xlim(0.2, 0.4)\n",
+    "            axs2[0, mic_idx].set_xlim(0.2, 0.4)\n",
+    "        elif row.mic_type == 'audio_deck':\n",
+    "            axs1[0, mic_idx].set_ylim(1e-3, 5)\n",
+    "            axs1[0, mic_idx].set_xlim(0.3, 0.5)\n",
+    "            axs2[0, mic_idx].set_xlim(0.3, 0.5)\n",
+    "    elif frequency == 3125:\n",
+    "        if row.mic_type == 'measurement':\n",
+    "            axs1[0, mic_idx].set_ylim(1e-3, 1e-1)\n",
+    "            axs1[0, mic_idx].set_xlim(0.1, 0.3)\n",
+    "            axs2[0, mic_idx].set_xlim(0.1, 0.3)\n",
+    "        elif row.mic_type == 'audio_deck':\n",
+    "            axs1[0, mic_idx].set_ylim(1e-3, 5)\n",
+    "            axs1[0, mic_idx].set_xlim(0.3, 0.5)\n",
+    "            axs2[0, mic_idx].set_xlim(0.3, 0.5)\n",
+    "    \n",
+    "fig1.suptitle(f'{frequency} Hz, {row.mic_type} mic, motors:{row.motors}')\n",
+    "fname = f'plots/d_slice_{frequency}_{row.mic_type}_{row.motors}.pdf'\n",
+    "fig1.savefig(fname, bbox_inches='tight')\n",
+    "\n",
+    "fname = f'plots/d_slice_{frequency}_{row.mic_type}_{row.motors}_theory.pdf'\n",
+    "fig2.savefig(fname, bbox_inches='tight')\n",
+    "print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0. clean signals_f\n",
     "from wall_analysis import clean_signals_f \n",
-    "signals_f = clean_signals_f(row.signals_f, max_value=1000.0)\n",
     "signals_f = row.signals_f\n",
     "signals_f[np.isnan(signals_f)] = 0\n",
     "print(np.min(np.abs(signals_f)), np.max(np.abs(signals_f)))\n",
@@ -912,48 +1005,28 @@
    "outputs": [],
    "source": [
     "# 1. study the spectrum, frequency selection\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "if row.mic_type == 'audio_deck':\n",
+    "    all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "else:\n",
+    "    all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/44100)\n",
     "spec = np.nanmean(row.spectrogram, axis=1)\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "plot_spec = np.full(spec.shape, np.nan)\n",
     "plot_spec[spec>0] = np.log10(spec[spec>0])\n",
+    "print(np.nanmin(plot_spec), np.nanmax(plot_spec))\n",
     "ax.pcolorfast(range(len(row.seconds)), all_frequencies, plot_spec.T)\n",
+    "ax.axhline(frequency, color='black', ls=':')\n",
     "ax.set_ylim(100, 5000)\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.set_xlim(100, 5000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
-    "# 2. study the bin of interest\n",
-    "# chosen bin based on buzzer\n",
-    "buzzer_times = row.frequencies_matrix[:, 0] == frequency\n",
-    "valid_times = row.seconds > 0\n",
-    "mask = buzzer_times & valid_times\n",
-    "\n",
-    "spec = np.abs(row.signals_f) # times x mics x freqs\n",
-    "n_mics = spec.shape[1]\n",
-    "fig, axs = plt.subplots(2, n_mics, squeeze=False, sharex=True)\n",
+    "fig, axs = plt.subplots(1, n_mics, squeeze=False)\n",
     "fig.set_size_inches(10, 5)\n",
-    "\n",
-    "distances_cm = np.linspace(10, 60)\n",
-    "slices_theory = get_dist_slice_theory(frequency, distances_cm=distances_cm)\n",
-    "slices_pyroom = get_dist_slice_pyroom(frequency, distances_cm=distances_cm)\n",
-    "\n",
     "for mic_idx in range(n_mics):\n",
-    "    axs[0, mic_idx].set_title(f'mic{mic_idx}')\n",
-    "    axs[0, mic_idx].semilogy(row.d_estimate[mask], spec[mask, mic_idx, 0], \n",
-    "                      color=f'C{mic_idx}')\n",
-    "    #axs[0, mic_idx].set_ylim(1e-3, 5.0)\n",
-    "    \n",
-    "    axs[1, mic_idx].semilogy(distances_cm / 100, slices_theory[:, mic_idx], color='black', label='theory')\n",
-    "    axs[1, mic_idx].semilogy(distances_cm / 100, slices_pyroom[:, mic_idx], color='gray', label='pyroom')\n",
-    "    axs[1, mic_idx].set_xlabel('distance [m]')"
+    "    spec_avg = np.nanmean(row.spectrogram[100: 500, mic_idx, :], axis=0)\n",
+    "    axs[0, mic_idx].plot(all_frequencies, spec_avg, color=f'C{mic_idx}')\n",
+    "    axs[0, mic_idx].set_xlim(1000, 4000)\n",
+    "    axs[0, mic_idx].axvline(frequency, color='black', ls=':')"
    ]
   },
   {
