Save a few more plots

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -43,6 +43,7 @@
     "fname = 'results/calibration.pkl'\n",
     "\n",
     "try:\n",
+    "    raise\n",
     "    df_total = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
@@ -234,7 +235,12 @@
     "            mask = psd[i, :] > 0\n",
     "            ax.plot(frequencies[mask], psd[i, mask], color=f'C{i}', label=f'mic{i}', marker='o')\n",
     "        ax.set_yscale('log')\n",
-    "        ax.legend(loc='upper left')"
+    "        ax.legend(loc='upper left')\n",
+    "        \n",
+    "        if source == 'sweep_buzzer':\n",
+    "            fname = f'plots/calibration{row.appendix}.pdf'\n",
+    "            fig.savefig(fname, bbox_inches='tight')\n",
+    "            print('saved as', fname)"
    ]
   },
   {
@@ -692,8 +698,8 @@
     "if kwargs['snr'] != 0:\n",
     "    raise ValueError('need to implement spectrogram estimation for snr>0')\n",
     "    \n",
-    "spec = get_spectrogram(df)\n",
     "stft = np.array([*df.loc[:, \"signals_f\"]]).transpose(2, 1, 0)\n",
+    "print(stft.shape)\n",
     "times = (df.timestamp.values - df.iloc[0].timestamp)/ 1000.0\n",
     "fig, axs = plt.subplots(stft.shape[1], sharex=True, sharey=True)\n",
     "fig.set_size_inches(15, 10)\n",
@@ -806,16 +812,12 @@
     "min_freq_plot = 0 #2500\n",
     "max_freq_plot = 16000 #3000\n",
     "mask_freq = (frequencies_chirp < max_freq_plot) & (frequencies_chirp > min_freq_plot)\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 10)\n",
-    "\n",
-    "slope = 14930 / 21170 \n",
-    "offset = 0\n",
     "\n",
     "spec_small = spec_chirp[mask_freq, :]\n",
     "spec_small = spec_small[:, times_chirp]\n",
-    "ax.pcolorfast(seconds[times_chirp], frequencies_chirp[mask_freq], np.log10(spec_small))\n",
-    "ax.set_ylim(min_freq_plot, max_freq_plot)"
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(times_chirp, frequencies_chirp[mask_freq], np.log10(spec_small))"
    ]
   },
   {
@@ -824,7 +826,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500)\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "\n",
+    "slope = 14930 / 21170 \n",
+    "offset = 0\n",
+    "\n",
+    "ax.pcolorfast(range(len(times_chirp)), frequencies_chirp[mask_freq], np.log10(spec_small))\n",
+    "ax.set_ylim(min_freq_plot, max_freq_plot)\n",
+    "\n",
+    "psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500, ax=ax)\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 10)\n",
     "plt.title('psd of buzzer frequency sweep')\n",
