Add more calibration studies

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -968,6 +968,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from evaluate_data import read_df_from_wav\n",
+    "df_wav = read_df_from_wav('../experiments/2021_01_07_snr_study/export/motors_nosnr_noprops_mono1750.wav')\n",
+    "spec = get_spectrogram(df_wav)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs = df_wav.iloc[0].frequencies\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(range(spec.shape[0]), freqs, np.log10(spec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Buzzer calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evaluate_data import read_df_from_wav\n",
+    "from evaluate_data import get_spectrogram\n",
+    "df_wav = read_df_from_wav('../experiments/2020_12_2_chirp/export/nomotors_nosnr_noprops_sweep_all_50.wav')\n",
+    "spec = get_spectrogram(df_wav)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "buzzer_freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "freqs = df_wav.iloc[0].frequencies\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(15, 15)\n",
+    "ax.pcolorfast(range(spec.shape[0]), freqs, np.log10(spec))\n",
+    "[ax.axhline(f, color='orange', alpha=0.2) for f in buzzer_freqs[-100:]]\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_freq = 200\n",
+    "spec_zoom = spec[:max_freq, :300]\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(15, 15)\n",
+    "ax.pcolorfast(range(spec_zoom.shape[1]), freqs[:max_freq], np.log10(spec_zoom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
