Replace scipy.stft with custom method

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -35,7 +35,6 @@
     "from bin_selection import select_frequencies\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS, FFTSIZE\n",
     "\n",
-    "\n",
     "DURATION_PER_FREQ = 0.5 \n",
     "DURATION_SEC = DURATION_PER_FREQ * FFTSIZE\n",
     "print(DURATION_SEC)\n",
@@ -97,24 +96,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def matrix_slices(df_matrix, frequencies, distances):\n",
+    "def matrix_slices(df_matrix, frequencies, distances, saveas=''):\n",
     "    from ipywidgets import interact, interactive, fixed, interact_manual, FloatSlider, IntSlider\n",
     "    import ipywidgets as widgets\n",
     "\n",
     "    def update_figure(slice_f, slice_d):\n",
     "        fig, axs = plt.subplots(1, 2)\n",
-    "        fig.set_size_inches(10, 5)\n",
-    "        axs[0].semilogy(distances, df_matrix[slice_f, :])\n",
+    "        fig.set_size_inches(10, 3)\n",
+    "        #axs[0].semilogy(distances, df_matrix[slice_f, :])\n",
+    "        axs[0].plot(distances, df_matrix[slice_f, :])\n",
     "        axs[0].set_title(f'frequency = {frequencies[slice_f]:.0f} Hz')\n",
     "        axs[0].set_xlabel('distance [cm]')\n",
-    "        axs[0].set_ylim(1e-1, 10)\n",
+    "        axs[0].set_ylim(1, 5)\n",
     "        #axs[0].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
     "\n",
-    "        axs[1].semilogy(frequencies, df_matrix[:, slice_d])\n",
+    "        #axs[1].semilogy(frequencies, df_matrix[:, slice_d])\n",
+    "        axs[1].plot(frequencies, df_matrix[:, slice_d])\n",
     "        axs[1].set_title(f'distance = {distances[slice_d]:.0f} cm')\n",
     "        axs[1].set_xlabel('frequency [Hz]')\n",
-    "        axs[1].set_ylim(1e-1, 10)\n",
+    "        axs[1].set_ylim(1, 5)\n",
     "        #axs[1].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
+    "        if saveas != '':\n",
+    "            fig.savefig(saveas, bbox_inches='tight')\n",
     "        plt.show()\n",
     "\n",
     "    interactive_plot = interact(update_figure, \n",
@@ -246,7 +249,7 @@
     "from simulation import get_freq_slice_pyroom\n",
     "import progressbar\n",
     "\n",
-    "distances = np.linspace(0, 60, 100)\n",
+    "distances = np.linspace(0, 60, 200)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "df_matrix = np.zeros((len(frequencies), len(distances)))\n",
     "\n",
@@ -288,6 +291,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "freq_start = int(min_freq / FS * N_BUFFER)\n",
+    "freq_end = int(max_freq / FS * N_BUFFER)\n",
+    "distance_end = 1000\n",
+    "plt.gca().pcolorfast(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
+    "plt.xlabel('distance [cm]')\n",
+    "plt.ylabel('frequency [Hz]')\n",
+    "fname = 'plots/distance-frequency-matrix.pdf'\n",
+    "fig.savefig(fname, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "min_freq = 100\n",
     "max_freq = 20000\n",
     "\n",
@@ -296,8 +317,13 @@
     "freq_start = int(min_freq / FS * N_BUFFER)\n",
     "freq_end = int(max_freq / FS * N_BUFFER)\n",
     "distance_end = 1000\n",
-    "plt.pcolormesh(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
-    "matrix_slices(df_matrix[freq_start:freq_end, :distance_end], frequencies[freq_start:freq_end], distances[:distance_end])"
+    "plt.gca().pcolorfast(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
+    "plt.xlabel('distance [cm]')\n",
+    "plt.ylabel('frequency [Hz]')\n",
+    "fname = 'plots/distance-frequency-matrix.pdf'\n",
+    "fig.savefig(fname, bbox_inches='tight')\n",
+    "fname = 'plots/distance-frequency-matrix-slice.pdf'\n",
+    "matrix_slices(df_matrix[freq_start:freq_end, :distance_end], frequencies[freq_start:freq_end], distances[:distance_end], saveas=fname)"
    ]
   },
   {
@@ -327,7 +353,7 @@
     "\n",
     "max_distance = 60\n",
     "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
-    "fig.suptitle('frequency slices')\n",
+    "fig.suptitle('distance slices', y=0.95)\n",
     "fig.set_size_inches(10, 5)\n",
     "for i, f in enumerate(frequencies_slices):\n",
     "    idx = np.argmin(np.abs(frequencies-f))\n",
@@ -351,7 +377,8 @@
     "    plt.figure()\n",
     "    plt.plot(1/freq, np.abs(fft))\n",
     "    plt.axvline(d_constr, color='C1')\n",
-    "axs[-1].set_xlabel('distance [cm]')"
+    "axs[-1].set_xlabel('distance [cm]')\n",
+    "fig.savefig('plots/distance-frequency-matrix-algorithm.pdf', bbox_inches='tight')"
    ]
   },
   {
