--- a/notebooks/PositionStudy.ipynb
+++ b/notebooks/PositionStudy.ipynb
@@ -31,6 +31,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_spectrogram(spec, freqs, max_freq=5000, ax=None):\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(10, 5)\n",
+    "        \n",
+    "    ax.pcolorfast(range(spec.shape[1]), freqs[freqs<max_freq], np.log10(spec[freqs<max_freq]))\n",
+    "    ax.set_ylabel('frequency [Hz]')\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from evaluate_data import read_df_from_wav, get_spectrogram\n",
     "\n",
     "freq = 1750\n",
@@ -54,9 +77,10 @@
    },
    "outputs": [],
    "source": [
+    "base_filename = f'../experiments/2021_01_07_snr_study/export/motors_nosnr_noprops_mono{freq}'\n",
+    "\n",
     "df_specs = pd.DataFrame(columns=['number', 'spec', 'freqs'])\n",
     "for number, position_name in position_dict.items():\n",
-    "    base_filename = f'../experiments/2021_01_07_snr_study/export/motors_nosnr_noprops_mono{freq}'\n",
     "    appendix = '' if number==0 else f'_{number}'\n",
     "    try:\n",
     "        filename = f'{base_filename}{appendix}.wav'\n",
@@ -66,13 +90,9 @@
     "        continue\n",
     "    spec = get_spectrogram(df_wav)\n",
     "    freqs = df_wav.iloc[0].frequencies\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
     "    \n",
-    "    max_freq = 5000\n",
-    "    ax.pcolorfast(range(spec.shape[1]), freqs[freqs<max_freq], np.log10(spec[freqs<max_freq]))\n",
+    "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
     "    ax.set_title(position_name)\n",
-    "    ax.set_ylabel('frequency [Hz]')\n",
     "    \n",
     "    df_specs.loc[len(df_specs), :] = {\n",
     "        'number': number,\n",
@@ -110,7 +130,6 @@
     "\n",
     "        ax.semilogy(freqs[freqs<max_freq], np.mean(spec_window, axis=1), label=position_dict[row.number], \n",
     "                    color=f'C{i}')\n",
-    "    \n",
     "        axs[i].semilogy(freqs[freqs<max_freq], np.mean(spec_window, axis=1), color=f'C{i}')\n",
     "        axs[i].set_title(position_dict[row.number])\n",
     "    ax.legend(loc='upper right')\n",
@@ -120,14 +139,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(15, 15)\n",
     "plt.loglog(freqs[freqs<max_freq], np.mean(spec_window, axis=1), color=f'C{i}')\n",
     "plt.grid(which='both')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sweep study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "exp_dict = {\n",
+    "    '45000': 'motors_nosnr_noprops_None.wav',\n",
+    "    '55000': 'motors_nosnr_noprops_None_55000.wav',\n",
+    "    'mono': 'nomotors_nosnr_noprops_mono3125.wav',\n",
+    "    'mono 55000': 'motors_nosnr_noprops_mono3125_55000.wav',\n",
+    "    'mono 45000': 'motors_nosnr_noprops_mono3125.wav',\n",
+    "    'sweep': 'nomotors_nosnr_noprops_sweep.wav',\n",
+    "    'sweep 45000': 'motors_nosnr_noprops_sweep.wav',\n",
+    "}\n",
+    "\n",
+    "freq = 3125\n",
+    "#base_filename = f'../experiments/2021_01_14_snr_study/export/'\n",
+    "#base_filename = f'../experiments/2021_01_15_snr_study/export/'\n",
+    "base_filename = f'../experiments/2021_01_15_snr_study_2/export/'\n",
+    "\n",
+    "df_specs = pd.DataFrame(columns=['number', 'spec', 'freqs'])\n",
+    "for title, fname in exp_dict.items():\n",
+    "    try:\n",
+    "        filename = base_filename + fname\n",
+    "        df_wav = read_df_from_wav(filename)\n",
+    "    except FileNotFoundError:\n",
+    "        print('skipping', filename)\n",
+    "        continue\n",
+    "    spec = get_spectrogram(df_wav)\n",
+    "    freqs = df_wav.iloc[0].frequencies\n",
+    "    \n",
+    "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
+    "    ax.set_title(title)\n",
+    "    \n",
+    "    df_specs.loc[len(df_specs), :] = {\n",
+    "        'title': title,\n",
+    "        'spec':spec,\n",
+    "        'freqs':freqs\n",
+    "    }"
    ]
   },
   {
