--- a/notebooks/PositionStudy.ipynb
+++ b/notebooks/PositionStudy.ipynb
@@ -108,13 +108,15 @@
    "outputs": [],
    "source": [
     "time_window_dict =  {\n",
-    "    'buzzer only': range(10, 20),\n",
-    "    'buzzer and props': range(80, 90)\n",
+    "    'buzzer only': (range(10, 20), '-'),\n",
+    "    'buzzer and props': (range(80, 90), ':')\n",
     "}\n",
+    "max_freq = 16000\n",
     "\n",
-    "fig, axs = plt.subplots(1, len(df_specs), sharey=True)\n",
+    "fig, axs = plt.subplots(1, len(df_specs), sharey=True, squeeze=False)\n",
+    "[ax.grid(which='both') for ax in axs.flatten()]\n",
     "fig.set_size_inches(20, 5)\n",
-    "for title, time_window in time_window_dict.items():\n",
+    "for title, (time_window, ls) in time_window_dict.items():\n",
     "    \n",
     "    fig, ax  = plt.subplots()\n",
     "    fig.set_size_inches(20, 5)\n",
@@ -123,30 +125,34 @@
     "        spec = row.spec\n",
     "        freqs = row.freqs\n",
     "\n",
-    "        max_freq = 16000\n",
     "\n",
     "        spec_window = spec[:, time_window] \n",
-    "        spec_window = spec_window[freqs<max_freq, :]\n",
     "\n",
-    "        ax.semilogy(freqs[freqs<max_freq], np.mean(spec_window, axis=1), label=position_dict[row.number], \n",
-    "                    color=f'C{i}')\n",
-    "        axs[i].semilogy(freqs[freqs<max_freq], np.mean(spec_window, axis=1), color=f'C{i}')\n",
-    "        axs[i].set_title(position_dict[row.number])\n",
+    "        ax.semilogy(freqs, np.mean(spec_window, axis=1), label=position_dict[row.number], color=f'C{i}')\n",
+    "        axs[0, i].semilogy(freqs, np.mean(spec_window, axis=1), color=f'C{i}', ls=ls, label=title)\n",
+    "        axs[0, i].set_xlim(0, max_freq)\n",
+    "        axs[0, i].set_title(position_dict[row.number])\n",
+    "        \n",
+    "    axs[0, i].legend(loc='upper right')\n",
+    "    axs[0, i].semilogy()\n",
+    "    \n",
     "    ax.legend(loc='upper right')\n",
-    "    ax.set_title(title)"
+    "    ax.set_title(title)\n",
+    "    ax.grid(which='both')\n",
+    "    ax.set_xlim(0, max_freq)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
     "fig.set_size_inches(15, 15)\n",
-    "plt.loglog(freqs[freqs<max_freq], np.mean(spec_window, axis=1), color=f'C{i}')\n",
+    "plt.loglog(freqs, np.mean(spec_window, axis=1), color=f'C{i}')\n",
     "plt.grid(which='both')"
    ]
   },
@@ -154,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sweep study"
+    "# Second study"
    ]
   },
   {
@@ -180,7 +186,7 @@
     "#base_filename = f'../experiments/2021_01_15_snr_study/export/'\n",
     "base_filename = f'../experiments/2021_01_15_snr_study_2/export/'\n",
     "\n",
-    "df_specs = pd.DataFrame(columns=['number', 'spec', 'freqs'])\n",
+    "df_specs = pd.DataFrame(columns=['title', 'spec', 'freqs'])\n",
     "for title, fname in exp_dict.items():\n",
     "    try:\n",
     "        filename = base_filename + fname\n",
@@ -200,6 +206,188 @@
     "        'freqs':freqs\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_list = ['mono', '55000', 'mono 55000']\n",
+    "title_list = ['mono', '45000', 'mono 45000']\n",
+    "ls_list = [':', ':', ':']\n",
+    "start_time = 67\n",
+    "max_freq = 5000\n",
+    "min_freq = 100\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "for title, ls in zip(title_list, ls_list):\n",
+    "    row = df_specs.loc[df_specs.title==title].iloc[0]\n",
+    "    \n",
+    "    spec = row.spec[:, start_time:]\n",
+    "    freqs = row.freqs\n",
+    "    #ax_spec = plot_spectrogram(spec, row.freqs)\n",
+    "    #ax_spec.set_title(title)\n",
+    "    #ax.loglog(row.freqs, np.mean(spec, axis=1), label=title)\n",
+    "    ax.semilogy(freqs, np.mean(spec, axis=1), label=title, ls=ls)\n",
+    "ax.set_title('average amplitude')\n",
+    "ax.legend(loc='upper right')\n",
+    "ax.set_xlabel('frequency [Hz]')\n",
+    "ax.set_xlim(min_freq, max_freq)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "spec_monoprops = df_specs.loc[df_specs.title=='mono 45000'].iloc[0].spec[:, start_time:]\n",
+    "spec_props = df_specs.loc[df_specs.title=='45000'].iloc[0].spec[:, start_time:]\n",
+    "ax.semilogy(freqs, np.mean(spec_monoprops, axis=1)/np.mean(spec_props, axis=1), label='ratio')\n",
+    "ax.legend(loc='upper right')\n",
+    "ax.set_xlabel('frequency [Hz]')\n",
+    "ax.set_title('ratio of mono 45000 vs. 45000')\n",
+    "ax.set_xlim(min_freq, max_freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# propeller noise study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for thrust in [45000, 55000]:\n",
+    "    row = df_specs.loc[df_specs.title==str(thrust)].iloc[0]\n",
+    "    spec = row.spec[:, start_time:]\n",
+    "    \n",
+    "    mean = np.mean(spec, axis=1)\n",
+    "    std = np.std(spec, axis=1)\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.semilogy(row.freqs, mean)\n",
+    "    plt.semilogy(row.freqs, mean+std)\n",
+    "    plt.semilogy(row.freqs, std/mean)\n",
+    "    #plt.errorbar(x=row.freqs, y=mean, yerr=1.0) #yerr=std)\n",
+    "    plt.xlim(100, 5000)\n",
+    "    plt.ylim(1e-3, 1e4)\n",
+    "    plt.title(f'motor thrust: {thrust}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sweep study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row_sweep = df_specs.loc[df_specs.title==\"sweep\"].iloc[0]\n",
+    "max_bins = np.argmax(row_sweep.spec, axis=0)\n",
+    "max_freqs = row_sweep.freqs[max_bins]\n",
+    "\n",
+    "#end_freq = max_freqs[np.argmin(np.abs(max_freqs - 4875))]\n",
+    "#end_freq_idx = np.argmin(np.abs(row.freqs - end_freq))\n",
+    "#end_idx = np.where(max_freqs == end_freq)[0][-1]\n",
+    "\n",
+    "start_freq = max_freqs[np.argmin(np.abs(max_freqs - 3000))]\n",
+    "start_idx = np.where(max_freqs == start_freq)[0][0]\n",
+    "print('start idx', start_idx)\n",
+    "\n",
+    "end_idx = np.where(max_freqs > 2000)[0][-1]\n",
+    "\n",
+    "plt.figure()\n",
+    "#plt.plot(max_freqs[start_idx:end_idx])\n",
+    "plt.plot(max_freqs)\n",
+    "plt.axvline(start_idx, color='k')\n",
+    "plt.axvline(end_idx, color='k')\n",
+    "\n",
+    "max_bins = max_bins[start_idx:end_idx]\n",
+    "end_idx -= start_idx\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(max_bins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "start = 250 \n",
+    "unique_bins = np.unique(max_bins[start:])\n",
+    "\n",
+    "fig, ax_all = plt.subplots()\n",
+    "\n",
+    "fig, axs = plt.subplots(len(unique_bins), sharey=True, sharex=True)\n",
+    "fig.set_size_inches(10, len(unique_bins)*3)\n",
+    "for title, ls in zip([\"sweep\", \"sweep 45000\"], [':', ':']):\n",
+    "    row = df_specs.loc[df_specs.title==title].iloc[0]\n",
+    "\n",
+    "    max_freqs = row.freqs[np.argmax(row.spec, axis=0)]\n",
+    "    start_freq = max_freqs[np.argmin(np.abs(max_freqs - 3000))]\n",
+    "    start_idx = np.where(max_freqs == start_freq)[0][0]\n",
+    "\n",
+    "    spec = row.spec[:, start_idx:]\n",
+    "    freqs = row.freqs\n",
+    "    times = range(spec.shape[1])\n",
+    "\n",
+    "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
+    "    ax.set_title(title)\n",
+    "\n",
+    "    max_freqs = row.freqs[max_bins]\n",
+    "    ax.plot(range(len(max_freqs)), max_freqs, color='white', ls=':')\n",
+    "    ax.set_ylim(1000, 5000)\n",
+    "    \n",
+    "    ax.axvline(start, color='white', ls='-')\n",
+    "    \n",
+    "    max_amps = {}\n",
+    "    for i, bin_ in enumerate(unique_bins):\n",
+    "\n",
+    "        freq = np.round(freqs[bin_])\n",
+    "        cut_indices = np.where(max_bins[start:]==bin_)[0]\n",
+    "\n",
+    "        cut_spec = spec[:, start+cut_indices]\n",
+    "        avg_spec = np.median(cut_spec, axis=1)\n",
+    "\n",
+    "\n",
+    "        axs[i].semilogy(freqs, avg_spec, ls=ls)\n",
+    "        #axs[i].axvline(freq, color='C1', ls=':')\n",
+    "        if len(cut_indices) >= 10:\n",
+    "            max_amps[freq] = avg_spec[bin_]\n",
+    "        axs[i].set_title(f'{freq} Hz: average over {len(cut_indices)}')\n",
+    "        axs[i].grid(which='major')\n",
+    "    axs[i].set_ylim(1e-3, 1e3)\n",
+    "    axs[i].set_xlim(1000, 5000)\n",
+    "    \n",
+    "    ax_all.semilogy(list(max_amps.keys()), list(max_amps.values()), marker='o', label=title)\n",
+    "ax_all.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
