--- a/notebooks/SnrStudy.ipynb
+++ b/notebooks/SnrStudy.ipynb
@@ -330,7 +330,7 @@
     "\n",
     "fig, axs = plt.subplots(len(unique_bins), sharey=True, sharex=True)\n",
     "fig.set_size_inches(10, len(unique_bins)*3)\n",
-    "for title, ls in zip([\"sweep\", \"sweep 45000\"], [':', ':']):\n",
+    "for j, title in enumerate([\"sweep\", \"sweep 45000\"]):\n",
     "    row = df_specs.loc[df_specs.title==title].iloc[0]\n",
     "\n",
     "    max_freqs = row.freqs[np.argmax(row.spec, axis=0)]\n",
@@ -354,22 +354,29 @@
     "    for i, bin_ in enumerate(unique_bins):\n",
     "\n",
     "        freq = np.round(freqs[bin_])\n",
-    "        cut_indices = np.where(max_bins[start:]==bin_)[0]\n",
+    "        # start from 1 to remove \"edge\" values\n",
+    "        cut_indices = np.where(max_bins[start:]==bin_)[0][1:]\n",
+    "        if not len(cut_indices):\n",
+    "            continue\n",
     "\n",
     "        cut_spec = spec[:, start+cut_indices]\n",
     "        avg_spec = np.median(cut_spec, axis=1)\n",
-    "\n",
-    "\n",
-    "        axs[i].semilogy(freqs, avg_spec, ls=ls)\n",
-    "        #axs[i].axvline(freq, color='C1', ls=':')\n",
+    "        std_spec = np.std(cut_spec[bin_]) / avg_spec[bin_] * 100\n",
+    "        \n",
     "        if len(cut_indices) >= 10:\n",
-    "            max_amps[freq] = avg_spec[bin_]\n",
+    "            max_amps[freq] = (avg_spec[bin_], std_spec)\n",
+    "        axs[i].semilogy(freqs, avg_spec, ls=ls, label=f'std ratio: {std_spec:.0f}')\n",
+    "        axs[i].legend(loc='upper right')\n",
     "        axs[i].set_title(f'{freq} Hz: average over {len(cut_indices)}')\n",
     "        axs[i].grid(which='major')\n",
     "    axs[i].set_ylim(1e-3, 1e3)\n",
     "    axs[i].set_xlim(1000, 5000)\n",
     "    \n",
-    "    ax_all.semilogy(list(max_amps.keys()), list(max_amps.values()), marker='o', label=title)\n",
+    "    means = [v[0] for v in max_amps.values()]\n",
+    "    stds = [v[1] for v in max_amps.values()]\n",
+    "    ax_all.errorbar(list(max_amps.keys()), means, stds, marker='o', label=title+' mean', ls='-', color=f'C{j}')\n",
+    "    #ax_all.semilogy(list(max_amps.keys()), stds, marker='o', label=title+' std', ls=':', color=f'C{j}')\n",
+    "    ax_all.set_yscale('log')\n",
     "ax_all.legend()"
    ]
   },
