Add new studies

--- a/notebooks/SnrStudy.ipynb
+++ b/notebooks/SnrStudy.ipynb
@@ -31,12 +31,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_spectrogram(spec, freqs, max_freq=5000, ax=None):\n",
+    "def plot_spectrogram(spec, freqs, max_freq=5000, min_freq=1000, ax=None):\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
     "        \n",
-    "    ax.pcolorfast(range(spec.shape[1]), freqs[freqs<max_freq], np.log10(spec[freqs<max_freq]))\n",
+    "    mask = (freqs < max_freq) & (freqs > min_freq)\n",
+    "    ax.pcolorfast(range(spec.shape[1]), freqs[mask], np.log10(spec[mask]))\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    return ax"
    ]
@@ -54,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df_from_wav, get_spectrogram\n",
+    "from evaluate_data import read_df_from_wav, read_signal_from_wav, get_spectrogram\n",
     "\n",
     "freq = 1750\n",
     "position_dict = {\n",
@@ -79,12 +80,13 @@
    "source": [
     "base_filename = f'../experiments/2021_01_07_snr_study/export/motors_nosnr_noprops_mono{freq}'\n",
     "\n",
-    "df_specs = pd.DataFrame(columns=['number', 'spec', 'freqs'])\n",
+    "df_specs = pd.DataFrame(columns=['number', 'spec', 'freqs', 'signal_time'])\n",
     "for number, position_name in position_dict.items():\n",
     "    appendix = '' if number==0 else f'_{number}'\n",
     "    try:\n",
     "        filename = f'{base_filename}{appendix}.wav'\n",
     "        df_wav = read_df_from_wav(filename)\n",
+    "        signals_wav = read_signal_from_wav(filename) # n_times, n_mics, n_buffer\n",
     "    except FileNotFoundError:\n",
     "        print('skipping', filename)\n",
     "        continue\n",
@@ -97,49 +99,70 @@
     "    df_specs.loc[len(df_specs), :] = {\n",
     "        'number': number,\n",
     "        'spec':spec,\n",
-    "        'freqs':freqs\n",
+    "        'freqs':freqs,\n",
+    "        'signal_time': signals_wav\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "time_window_dict =  {\n",
-    "    'buzzer only': (range(10, 20), '-'),\n",
-    "    'buzzer and props': (range(80, 90), ':')\n",
+    "    'buzzer only': (range(10, 20), '-', 'C0'),\n",
+    "    'buzzer and props': (range(80, 90), ':', 'C1')\n",
     "}\n",
     "max_freq = 16000\n",
     "\n",
-    "fig, axs = plt.subplots(1, len(df_specs), sharey=True, squeeze=False)\n",
+    "figs, axs = plt.subplots(1, len(df_specs), sharey=True, squeeze=False)\n",
     "[ax.grid(which='both') for ax in axs.flatten()]\n",
-    "fig.set_size_inches(20, 5)\n",
-    "for title, (time_window, ls) in time_window_dict.items():\n",
+    "figs.set_size_inches(20, 5)\n",
+    "\n",
+    "figs_time, axs_time = plt.subplots(1, len(df_specs), sharey=True, squeeze=False)\n",
+    "[ax.grid(which='both') for ax in axs_time.flatten()]\n",
+    "figs_time.set_size_inches(20, 5)\n",
+    "\n",
+    "for title, (time_window, ls, color) in time_window_dict.items():\n",
     "    \n",
     "    fig, ax  = plt.subplots()\n",
-    "    fig.set_size_inches(20, 5)\n",
+    "    fig.set_size_inches(15, 5)\n",
     "    \n",
     "    for i, row in df_specs.iterrows():\n",
     "        spec = row.spec\n",
     "        freqs = row.freqs\n",
-    "\n",
-    "\n",
+    "        label = position_dict[row.number] + ' position'\n",
+    "        signal = row.signal_time[time_window[0], 0, :]\n",
     "        spec_window = spec[:, time_window] \n",
-    "\n",
-    "        ax.semilogy(freqs, np.mean(spec_window, axis=1), label=position_dict[row.number], color=f'C{i}')\n",
-    "        axs[0, i].semilogy(freqs, np.mean(spec_window, axis=1), color=f'C{i}', ls=ls, label=title)\n",
-    "        axs[0, i].set_xlim(0, max_freq)\n",
-    "        axs[0, i].set_title(position_dict[row.number])\n",
     "        \n",
-    "    axs[0, i].legend(loc='upper right')\n",
-    "    axs[0, i].semilogy()\n",
+    "        ax.semilogy(freqs, np.mean(spec_window, axis=1), label=label, color=f'C{i}')\n",
+    "        \n",
+    "        axs[0, i].semilogy(freqs, np.mean(spec_window, axis=1), color=color, label=title)\n",
+    "        axs[0, i].set_xlim(0, max_freq)\n",
+    "        axs[0, i].set_title(label)\n",
+    "        axs[0, i].set_xlabel('frequency [Hz]')\n",
+    "        axs[0, i].legend(loc='upper right')\n",
+    "        axs[0, i].set_ylabel('loudness')\n",
+    "        \n",
+    "        axs_time[0, i].plot(signal, label=title, color=color)\n",
+    "        axs_time[0, i].set_xlabel('time idx [-]')\n",
+    "        axs_time[0, i].set_title(label)\n",
     "    \n",
     "    ax.legend(loc='upper right')\n",
     "    ax.set_title(title)\n",
-    "    ax.grid(which='both')\n",
-    "    ax.set_xlim(0, max_freq)"
+    "    ax.grid(which='major')\n",
+    "    ax.set_xlabel('frequency [Hz]')\n",
+    "    ax.set_xlim(0, max_freq)\n",
+    "    fname = f\"plots/snr_study_{title.replace(' ', '_')}.pdf\"\n",
+    "    fig.savefig(fname, bbox_inches='tight')\n",
+    "    print('saved as', fname)\n",
+    "    \n",
+    "fname = f\"plots/snr_study_side_by_side.pdf\"\n",
+    "figs.savefig(fname, bbox_inches='tight')\n",
+    "print('saved as', fname)"
    ]
   },
   {
@@ -182,15 +205,19 @@
     "}\n",
     "\n",
     "freq = 3125\n",
-    "#base_filename = f'../experiments/2021_01_14_snr_study/export/'\n",
-    "#base_filename = f'../experiments/2021_01_15_snr_study/export/'\n",
-    "base_filename = f'../experiments/2021_01_15_snr_study_2/export/'\n",
+    "start_time = 67\n",
     "\n",
-    "df_specs = pd.DataFrame(columns=['title', 'spec', 'freqs'])\n",
+    "#base_filename = f'../experiments/2021_01_14_snr_study/export/'\n",
+    "base_filename = f'../experiments/2021_01_15_snr_study/export/'\n",
+    "#base_filename = f'../experiments/2021_01_15_snr_study_2/export/'\n",
+    "\n",
+    "df_specs = pd.DataFrame(columns=['title', 'spec', 'freqs', 'signal_time'])\n",
     "for title, fname in exp_dict.items():\n",
     "    try:\n",
     "        filename = base_filename + fname\n",
     "        df_wav = read_df_from_wav(filename)\n",
+    "        signals_wav = read_signal_from_wav(filename) # n_times, n_mics, n_buffer\n",
+    "        \n",
     "    except FileNotFoundError:\n",
     "        print('skipping', filename)\n",
     "        continue\n",
@@ -200,10 +227,17 @@
     "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
     "    ax.set_title(title)\n",
     "    \n",
+    "    signal = signals_wav[start_time, 0, :]\n",
+    "    plt.figure()\n",
+    "    plt.plot(signal)\n",
+    "    plt.title(f'time signal at idx: {start_time}')\n",
+    "    plt.ylim(-1, 1)\n",
+    "    \n",
     "    df_specs.loc[len(df_specs), :] = {\n",
     "        'title': title,\n",
     "        'spec':spec,\n",
-    "        'freqs':freqs\n",
+    "        'freqs':freqs,\n",
+    "        'signal_time': signals_wav\n",
     "    }"
    ]
   },
@@ -216,7 +250,6 @@
     "title_list = ['mono', '55000', 'mono 55000']\n",
     "title_list = ['mono', '45000', 'mono 45000']\n",
     "ls_list = [':', ':', ':']\n",
-    "start_time = 67\n",
     "max_freq = 5000\n",
     "min_freq = 100\n",
     "\n",
@@ -288,6 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## first, find which bins we should look at per time. \n",
+    "\n",
     "row_sweep = df_specs.loc[df_specs.title==\"sweep\"].iloc[0]\n",
     "max_bins = np.argmax(row_sweep.spec, axis=0)\n",
     "max_freqs = row_sweep.freqs[max_bins]\n",
@@ -343,12 +378,14 @@
     "\n",
     "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
     "    ax.set_title(title)\n",
-    "\n",
     "    max_freqs = row.freqs[max_bins]\n",
     "    ax.plot(range(len(max_freqs)), max_freqs, color='white', ls=':')\n",
     "    ax.set_ylim(1000, 5000)\n",
-    "    \n",
     "    ax.axvline(start, color='white', ls='-')\n",
+    "    \n",
+    "    ax = plot_spectrogram(spec[:, start:], freqs, max_freq=5000, min_freq=2000)\n",
+    "    #ax.plot(range(len(max_freqs[start:])), max_freqs[start:], color='white', ls=':')\n",
+    "    ax.set_title(title)\n",
     "    \n",
     "    max_amps = {}\n",
     "    for i, bin_ in enumerate(unique_bins):\n",
@@ -368,8 +405,8 @@
     "        axs[i].semilogy(freqs, avg_spec, ls=ls, label=f'std ratio: {std_spec:.0f}')\n",
     "        axs[i].legend(loc='upper right')\n",
     "        axs[i].set_title(f'{freq} Hz: average over {len(cut_indices)}')\n",
-    "        axs[i].grid(which='major')\n",
-    "    axs[i].set_ylim(1e-3, 1e3)\n",
+    "        axs[i].grid(True, which='both')\n",
+    "    axs[i].set_ylim(1e-3, 1e5)\n",
     "    axs[i].set_xlim(1000, 5000)\n",
     "    \n",
     "    means = [v[0] for v in max_amps.values()]\n",
@@ -383,11 +420,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot strongest frequency\n",
+    "row = df_specs.loc[df_specs.title == 'sweep 45000'].iloc[0]\n",
+    "#row = df_specs.loc[df_specs.title == '45000'].iloc[0]\n",
+    "#row = df_specs.loc[df_specs.title == '55000'].iloc[0]\n",
+    "\n",
+    "# find strongest frequency above 100\n",
+    "max_freqs = np.round(row.freqs[np.argmax(row.spec, axis=0)], 1)\n",
+    "max_freqs_valid = max_freqs[max_freqs > 100]\n",
+    "\n",
+    "# need to add the max value in the end to make sure this works for all bins\n",
+    "bins = np.r_[np.unique(max_freqs_valid), np.max(max_freqs_valid)]\n",
+    "count, freqs = np.histogram(max_freqs_valid, bins=bins)\n",
+    "max_freq = freqs[np.argmax(count)]\n",
+    "\n",
+    "valid_time_indices = np.where(max_freqs == max_freq)[0]\n",
+    "invalid_time_indices = np.where(max_freqs != max_freq)[0]\n",
+    "bin_ = np.where(np.round(row.freqs, 1)==max_freq)[0][0]\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title(f'loudness of bin at {max_freq} Hz')\n",
+    "min_idx, max_idx = np.min(valid_time_indices), np.max(valid_time_indices)\n",
+    "plt.semilogy(range(min_idx, max_idx),row.spec[bin_, min_idx:max_idx])\n",
+    "plt.scatter(valid_time_indices, row.spec[bin_, valid_time_indices], color='C1', label=f'{max_freq} is loudest bin')\n",
+    "plt.scatter(invalid_time_indices[min_idx:], row.spec[bin_, invalid_time_indices[min_idx:]], color='C2', label=f'{max_freq} is not loudest bin')\n",
+    "ylim = plt.ylim()\n",
+    "print(ylim)\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "max_bins_valid = np.argmax(row.spec, axis=0)\n",
+    "plt.figure()\n",
+    "plt.title('loudness of loudest bin')\n",
+    "plt.semilogy(row.spec[max_bins_valid, range(row.spec.shape[1])])\n",
+    "plt.ylim(*ylim)"
+   ]
   },
   {
    "cell_type": "code",
