Add more snr evaluation

--- a/notebooks/SnrStudy.ipynb
+++ b/notebooks/SnrStudy.ipynb
@@ -162,6 +162,10 @@
     "    \n",
     "fname = f\"plots/snr_study_side_by_side.pdf\"\n",
     "figs.savefig(fname, bbox_inches='tight')\n",
+    "print('saved as', fname)\n",
+    "\n",
+    "fname = f\"plots/snr_study_side_by_side_time.pdf\"\n",
+    "figs_time.savefig(fname, bbox_inches='tight')\n",
     "print('saved as', fname)"
    ]
   },
@@ -231,7 +235,7 @@
     "    plt.figure()\n",
     "    plt.plot(signal)\n",
     "    plt.title(f'time signal at idx: {start_time}')\n",
-    "    plt.ylim(-1, 1)\n",
+    "    #plt.ylim(-1, 1)\n",
     "    \n",
     "    df_specs.loc[len(df_specs), :] = {\n",
     "        'title': title,\n",
