Move spectrogram and psd-related functions to new module

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "from evaluate_data import EXP_NAME, RES_DIRNAME, FS, DURATION_SEC\n",
-    "from evaluate_data import read_df, get_spectrogram, add_soundlevel, read_df_from_wav\n",
+    "from evaluate_data import read_df, add_soundlevel, read_df_from_wav\n",
+    "from frequency_analysis import get_spectrogram\n",
     "\n",
     "def custom_save(function=plt.savefig, fname=\"\"):\n",
     "    if not os.path.exists(os.path.dirname(fname)):\n",
@@ -90,9 +91,9 @@
     "df_props, pose_props = read_df(exp_name=exp_name,\n",
     "    degree=0, props=False, snr=False, motors=True, source=None)\n",
     "\n",
-    "spectrogram_source = get_spectrogram(df_source)\n",
-    "spectrogram_all = get_spectrogram(df_all)\n",
-    "spectrogram_props = get_spectrogram(df_props)\n",
+    "spectrogram_source, __ = get_spectrogram(df_source)\n",
+    "spectrogram_all, __ = get_spectrogram(df_all)\n",
+    "spectrogram_props, __ = get_spectrogram(df_props)\n",
     "\n",
     "plot_spectrogram(spectrogram_source, label=\"source\")\n",
     "plot_spectrogram(spectrogram_all, label=\"all\")\n",
