--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -85,7 +85,8 @@
    },
    "outputs": [],
    "source": [
-    "from wall_analysis import filter_by_dicts, extract_linear_psd, add_spectrogram\n",
+    "from wall_analysis import filter_by_dicts\n",
+    "from frequency_analysis import extract_linear_psd, add_spectrogram\n",
     "\n",
     "dict_chosen = [{\n",
     "    'snr': 0,\n",
@@ -122,7 +123,7 @@
    "outputs": [],
    "source": [
     "# test new functions\n",
-    "from wall_analysis import extract_psd, extract_psd_dict\n",
+    "from frequency_analysis import extract_psd, extract_psd_dict\n",
     "psd_dict1 = [{0: [], 100:[1, 2, 3], 200:[0, 4, 5]}, {100:[0, 1], 200:[1, 2]}]\n",
     "psd_dict2 = [{100:[1, 2, 5], 250:[1, 4, 5]}, {100:[0, 1], 250:[3, 4]}]\n",
     "psd_dict_list = [psd_dict1, psd_dict2]\n",
@@ -511,7 +512,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df_from_wav, get_fname, read_df, get_spectrogram\n",
+    "from evaluate_data import read_df_from_wav, get_fname, read_df\n",
+    "from frequency_analysis import get_spectrogram\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "chosen_freqs_approx = np.array([3013, 3120, 3530, 3680, 4150, 4270, 5130, 5212, 6430, 6690, 8000, 8420, 10940, 13140, 14920]) # 4270, \n",
