--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -384,7 +384,7 @@
    "outputs": [],
    "source": [
     "from constants import SPEED_OF_SOUND\n",
-    "from wall_analysis import extract_psd_dict, extract_psd\n",
+    "from frequency_analysis import extract_psd_dict, extract_psd\n",
     "from simulation import get_freq_slice_pyroom, get_freq_slice_theory\n",
     "    \n",
     "MIN_FREQ = 1000\n",
@@ -537,7 +537,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_analysis import add_spectrogram, add_distance_estimates\n",
+    "from wall_analysis import add_distance_estimates\n",
+    "from frequency_analysis import add_spectrogram\n",
     "\n",
     "df_dist = df_dist.assign(d_estimate=None)\n",
     "df_dist = df_dist.apply(add_distance_estimates, axis=1)\n",
